[JENKINS-67515] Fix vertical icon alignment for build status in M and S icon sizes (#6162)
* JENKINS-67515

* Fix headlines

--- a/war/src/main/less/base/layout-commons.less
+++ b/war/src/main/less/base/layout-commons.less
@@ -125,6 +125,8 @@ body.full-screen #main-panel {
 /* -------------------------------------- */
 
 h1.build-caption.page-headline {
+    display: flex;
+    align-items: center;
     max-width: 1200px;
     overflow: hidden;
     white-space: nowrap;
