--- a/war/src/main/less/modules/icons.less
+++ b/war/src/main/less/modules/icons.less
@@ -89,11 +89,12 @@
 }
 
 .build-status-icon__wrapper {
-  display: inline-block;
+  display: inline-flex;
   position: relative;
 }
+
 .build-status-icon__outer {
-  display: block;
+  display: flex;
   position: absolute;
   top: 50%;
   left: 50%;
